--- a/PulseNMore_RotemStahl.ipynb
+++ b/PulseNMore_RotemStahl.ipynb
@@ -1102,11 +1102,11 @@
         "multivariateReg(data)"
       ],
       "metadata": {
-        "id": "vL3jSEy_Ycc-",
-        "outputId": "19bb68f4-47c3-4e6b-8ad2-536443de13d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vL3jSEy_Ycc-",
+        "outputId": "19bb68f4-47c3-4e6b-8ad2-536443de13d9"
       },
       "execution_count": 90,
       "outputs": [
@@ -1146,7 +1146,12 @@
       "cell_type": "markdown",
       "source": [
         "# **3. Data Preprocessing**\n",
-        "Perform any necessary preprocessing on the data."
+        "Perform any necessary preprocessing on the data:\n",
+        "\n",
+        "the necessary preprocessing done on the data was:\n",
+        "1.   Change data to numeric values, Xi was not numeric.\n",
+        "2.   Change '[]' to NaN and later erase rows containing NaN. this made our data shorter and contained 47 valid data points out of the 51.\n",
+        "3. Remove one obvious outlier, one data point contained Y1 value about 500 units bigger than the rest of the data, and removing it allowed for a better view of the data."
       ],
       "metadata": {
         "id": "soZn-oCzXxyZ"
@@ -1155,10 +1160,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Data Exploration\n",
+        "# **4. Data Exploration**\n",
         "You have also received another file called ‘new_devices.csv’ containing data for 3 additional devices. Please rank these new devices based on their probability of belonging to the sample group\n",
         "\n",
-        "I am going to do that based on if they fall within the CI of our Yi data, for each one they fall within they will recive 1 point, 5 points being fits in our sample, 3-5 i will check the distance from our CI and re evaluate and less then 3 i will assume the new measurmant came from outside my sample."
+        "**I am going to do that based on if they fall within the CI of our Yi data, for each one they fall within they will receive 1 point, 5 points being fits in our sample, 3-5 I will check the distance from our CI and re evaluate and less then 3 i will assume the new measurmant came from outside my sample.**"
       ],
       "metadata": {
         "id": "3FbjT2XOcHxk"
@@ -1180,7 +1185,7 @@
       "metadata": {
         "id": "0HHMgABBcwnl"
       },
-      "execution_count": null,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -1196,9 +1201,9 @@
           "height": 300
         },
         "id": "qgiZI1nRdYSW",
-        "outputId": "e53381a2-5a76-4a1e-9e85-27cd3920ca02"
+        "outputId": "da790184-62fd-4c6b-eccd-71635d033834"
       },
-      "execution_count": null,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1227,7 +1232,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-761b038d-e261-4c98-9909-72d8c320117b\">\n",
+              "  <div id=\"df-ed8b1922-b21d-4242-b197-7f6e6657b346\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1367,7 +1372,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-761b038d-e261-4c98-9909-72d8c320117b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ed8b1922-b21d-4242-b197-7f6e6657b346')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -1380,8 +1385,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-6dd123e5-44bd-4054-8254-92c763d27951\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6dd123e5-44bd-4054-8254-92c763d27951')\"\n",
+              "    <div id=\"df-5e0e6ec2-a8e8-4467-bcbc-ab7292a4359f\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5e0e6ec2-a8e8-4467-bcbc-ab7292a4359f')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -1438,7 +1443,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-6dd123e5-44bd-4054-8254-92c763d27951 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-5e0e6ec2-a8e8-4467-bcbc-ab7292a4359f button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -1485,12 +1490,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-761b038d-e261-4c98-9909-72d8c320117b button.colab-df-convert');\n",
+              "          document.querySelector('#df-ed8b1922-b21d-4242-b197-7f6e6657b346 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-761b038d-e261-4c98-9909-72d8c320117b');\n",
+              "          const element = document.querySelector('#df-ed8b1922-b21d-4242-b197-7f6e6657b346');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1512,7 +1517,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 103
+          "execution_count": 94
         }
       ]
     },
@@ -1521,23 +1526,85 @@
       "source": [
         "def checkinside(data,ci95_all):\n",
         "  score=0\n",
-        "  is_between=0\n",
-        "  if is_between = np.logical_and(data.Y1 > ci95_all.ci95_1[0], x < ci95_all.ci95_1[1])\n",
+        "  if np.logical_and(data.Y1 > ci95_all[0][0], data.Y1 < ci95_all[0][1]):\n",
         "    score=score+1\n",
-        "  if is_between = np.logical_and(x > ci95_all.ci95_2[0], x < ci95_all.ci95_2[1])\n",
+        "  if np.logical_and(data.Y2 > ci95_all[1][0], data.Y2 < ci95_all[1][1]):\n",
         "    score=score+1\n",
-        "  if is_between = np.logical_and(x > ci95_all.ci95_3[0], x < ci95_all.ci95_3[1])\n",
+        "  if np.logical_and(data.Y3 > ci95_all[2][0], data.Y3 < ci95_all[2][1]):\n",
         "    score=score+1\n",
-        "  if is_between = np.logical_and(x > ci95_all.ci95_4[0], x < ci95_all.ci95_4[1])\n",
+        "  if np.logical_and(data.Y4 > ci95_all[3][0], data.Y4 < ci95_all[3][1]):\n",
         "    score=score+1\n",
-        "  if is_between = np.logical_and(x > ci95_all.ci95_5[0], x < ci95_all.ci95_5[1])\n",
-        "    score=score+1"
+        "  if np.logical_and(data.Y5 > ci95_all[4][0], data.Y5 < ci95_all[0][1]):\n",
+        "    score=score+1\n",
+        "\n",
+        "  return score"
       ],
       "metadata": {
         "id": "gCFJ_iRWdtmH"
       },
-      "execution_count": null,
+      "execution_count": 111,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(ci95_all[1][0])"
+      ],
+      "metadata": {
+        "id": "tG7Gkm9tbEsD",
+        "outputId": "e8a1e571-14ff-468e-cf11-cd0be21b813a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.411250000000003\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "checkinside(new_devices[1], ci95_all)"
+      ],
+      "metadata": {
+        "id": "gpefJa0Law19",
+        "outputId": "336c02b3-7774-4cb7-d5b0-9baa3b3bd576",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 502
+        }
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3802\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3803\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 1",
+            "\nThe above exception was the direct cause of the following exception:\n",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-113-493b1ee7fa2c>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcheckinside\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_devices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mci95_all\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3806\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3807\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3808\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3809\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3803\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3804\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3805\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3806\u001b[0m                 \u001b[0;31m# If we have a listlike key, _check_indexing_error will raise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 1"
+          ]
+        }
+      ]
     }
   ]
 }
