--- a/PulseNMore_RotemStahl.ipynb
+++ b/PulseNMore_RotemStahl.ipynb
@@ -1753,6 +1753,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#addind ID to better know our devices\n",
         "rawdata['ID'] = range(1, len(rawdata) + 1)\n",
         "# Replace empty lists with NaN\n",
         "rawdata.replace('[]', np.nan, inplace=True)\n",
