--- a/PulseNMore_RotemStahl.ipynb
+++ b/PulseNMore_RotemStahl.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "**Home Assignment - PulseNMore_Rotem Stahl**\n",
         "\n",
-        "In the following home assignment i was asked to analyze data from a sample of 51 devices, using the specific libraries numpy, pandas, and matplotlib. No other libraries are allowed for this analysis.\n",
+        "In the following home assignment I was asked to analyze data from a sample of 51 devices, using the specific libraries numpy, pandas, and matplotlib. No other libraries are allowed for this analysis.\n",
         "\n",
         "The dataset contains 5 dependent variables Y1 ... Y5 and 4 independent variables X2 ... X5, such that the variable Yi corresponds to Xi, except for Y1 which has no X variable."
       ],
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 103,
       "metadata": {
         "id": "mynHtJxG4xm6"
       },
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "GhDxVpdroRaZ"
       },
-      "execution_count": 57,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -83,9 +83,9 @@
           "height": 300
         },
         "id": "b8rxOQ2aV7KH",
-        "outputId": "f1d9f904-e9d6-4764-d1d4-cdcbc27d7cf9"
+        "outputId": "f467dc8e-9729-47c6-c3a2-1bd818f72483"
       },
-      "execution_count": 58,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -114,7 +114,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-6aa0a6f8-f6f9-43ff-bca2-420ae91d3dc1\">\n",
+              "  <div id=\"df-53256b34-ff19-4165-86da-a29109e452b4\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -245,7 +245,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6aa0a6f8-f6f9-43ff-bca2-420ae91d3dc1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-53256b34-ff19-4165-86da-a29109e452b4')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -258,8 +258,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-7e1f1c90-c6da-4ca7-9bd6-14806d277ddc\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7e1f1c90-c6da-4ca7-9bd6-14806d277ddc')\"\n",
+              "    <div id=\"df-61de7124-3e0f-4820-8573-bed3855a92e1\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-61de7124-3e0f-4820-8573-bed3855a92e1')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -316,7 +316,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-7e1f1c90-c6da-4ca7-9bd6-14806d277ddc button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-61de7124-3e0f-4820-8573-bed3855a92e1 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -363,12 +363,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6aa0a6f8-f6f9-43ff-bca2-420ae91d3dc1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-53256b34-ff19-4165-86da-a29109e452b4 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6aa0a6f8-f6f9-43ff-bca2-420ae91d3dc1');\n",
+              "          const element = document.querySelector('#df-53256b34-ff19-4165-86da-a29109e452b4');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -390,7 +390,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 105
         }
       ]
     },
@@ -417,7 +417,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def plot4(data,title):\n",
+        "def basic_data_plot(data,title):\n",
         "  fig, ax = plt.subplots(2, 2)\n",
         "\n",
         "  ax[0, 0].scatter(data.X2, data.Y2 )\n",
@@ -453,13 +453,13 @@
       "metadata": {
         "id": "stY6d2f1dIS2"
       },
-      "execution_count": 60,
+      "execution_count": 108,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "plot4(data,'Yi to Xi')"
+        "basic_data_plot(data,'Yi to Xi')"
       ],
       "metadata": {
         "colab": {
@@ -467,9 +467,9 @@
           "height": 492
         },
         "id": "p9x_Qf2_o7T2",
-        "outputId": "bbbc5c5f-c944-4a32-f0c4-27be646c94d5"
+        "outputId": "c1e0f851-4444-44e2-e2e2-100045dbf149"
       },
-      "execution_count": 61,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "display_data",
@@ -487,11 +487,15 @@
       "cell_type": "markdown",
       "source": [
         "#First impression\n",
-        "Looking at my initial data visualization - we can see that Yi changes but Xi is the same for all samples, which indicates that Xi might be a goal of a measurement, the background of the environment, or any other measurement relevant to our data.\n",
-        "looking at our data we see that Yi we see the mean and median are close to the value of Xi for all i, but the destribution around it changes.\n",
-        "Y2 is distributed roughly even around X2, and Y4 and X4 are the same.\n",
-        "Y3 is always smaller than X3, and besides one point it is even smaller than one size bigger than it.\n",
-        "Y5 is distributed to be smaller than X5, with a small number of points that are bigger than X5. They might be outliers."
+        "Looking at my initial data visualization - we can see that Yi changes but Xi is the same for all samples.\n",
+        "\n",
+        "looking at our data we see that Yi mean and median are close to the value of Xi for all i, but the destribution around it changes. This might indicate that Xi is a goal value of a measurement.\n",
+        "\n",
+        "I note that Y2 is distributed roughly even around X2, and Y4 and X4 are the same.\n",
+        "\n",
+        "Y3 is always smaller than X3, and besides one point it is even smaller by one magnitude of it.\n",
+        "\n",
+        "Y5 mostly distributed smaller than X5, with a small set of points that hit bigger than X5. They might be considre as outliers."
       ],
       "metadata": {
         "id": "pShZFAyS0Nnc"
