--- a/PulseNMore_RotemStahl.ipynb
+++ b/PulseNMore_RotemStahl.ipynb
@@ -656,16 +656,29 @@
     {
       "cell_type": "code",
       "source": [
+        "def make_CI(data,conf):\n",
+        "  ci_1 = np.percentile(data.Y1, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
+        "  ci_2 = np.percentile(data.Y2, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
+        "  ci_3 = np.percentile(data.Y3, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
+        "  ci_4 = np.percentile(data.Y4, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
+        "  ci_5 = np.percentile(data.Y5, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
+        "\n",
+        "  return ci_1,ci_2,ci_3,ci_4,ci_5"
+      ],
+      "metadata": {
+        "id": "3OkQBqPr8dUT"
+      },
+      "execution_count": 155,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def plot_5_hist(data,title):\n",
         "\n",
         "  #finding the CI\n",
         "  conf = 0.95\n",
-        "  ci95_1 = np.percentile(data.Y1, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_2 = np.percentile(data.Y2, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_3 = np.percentile(data.Y3, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_4 = np.percentile(data.Y4, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_5 = np.percentile(data.Y5, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "\n",
+        "  ci95_1,ci95_2,ci95_3,ci95_4,ci95_5=make_CI(data,conf)\n",
         "  fig, (ax1, ax2, ax3, ax4,ax5) = plt.subplots(nrows=5, ncols=1, figsize=(10, 8))\n",
         "\n",
         "  ax1.hist(data.Y1,  alpha=0.5, color='blue', density=True)\n",
@@ -732,7 +745,7 @@
       "metadata": {
         "id": "6Cvx-Iypz-gk"
       },
-      "execution_count": 118,
+      "execution_count": 156,
       "outputs": []
     },
     {
@@ -795,11 +808,7 @@
         "\n",
         "  #finding the CI\n",
         "  conf = 0.95\n",
-        "  ci95_1 = np.percentile(data.Y1, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_2 = np.percentile(data.Y2, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_3 = np.percentile(data.Y3, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_4 = np.percentile(data.Y4, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_5 = np.percentile(data.Y5, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
+        "  ci95_1,ci95_2,ci95_3,ci95_4,ci95_5=make_CI(data,conf)\n",
         "\n",
         "  #finding normal destribution\n",
         "  x1,y1=find_norm(data.Y1)\n",
@@ -875,7 +884,7 @@
       "metadata": {
         "id": "QL6jT6R_7Hwc"
       },
-      "execution_count": 121,
+      "execution_count": 157,
       "outputs": []
     },
     {
@@ -1438,31 +1447,27 @@
       "cell_type": "code",
       "source": [
         "def check_inside(data,check):\n",
-        "  #finding the CI of all\n",
-        "  alpha = 0.05/5 #handling multipule compersion\n",
+        "  # finding the CI of all\n",
+        "  alpha = 0.05/5 # handling multipule compersion\n",
         "  conf = 1 - alpha\n",
-        "  ci95_1 = np.percentile(data.Y1, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_2 = np.percentile(data.Y2, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_3 = np.percentile(data.Y3, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_4 = np.percentile(data.Y4, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_5 = np.percentile(data.Y5, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
+        "  ci_1,ci_2,ci_3,ci_4,ci_5=make_CI(data,conf)\n",
         "\n",
-        "  ci95_all=[ci95_1,ci95_2,ci95_3,ci95_4,ci95_5]\n",
+        "  ci_all=[ci_1,ci_2,ci_3,ci_4,ci_5]\n",
         "  score=0\n",
-        "  test=np.zeros(len(ci95_all))\n",
-        "  if np.logical_and(check.Y1 > ci95_all[0][0], check.Y1 < ci95_all[0][1]):\n",
+        "  test=np.zeros(len(ci_all))\n",
+        "  if np.logical_and(check.Y1 > ci_all[0][0], check.Y1 < ci_all[0][1]):\n",
         "    score=score+1\n",
         "    test[0]=1\n",
-        "  if np.logical_and(check.Y2 > ci95_all[1][0], check.Y2 < ci95_all[1][1]):\n",
+        "  if np.logical_and(check.Y2 > ci_all[1][0], check.Y2 < ci_all[1][1]):\n",
         "    score=score+1\n",
         "    test[1]=1\n",
-        "  if np.logical_and(check.Y3 > ci95_all[2][0], check.Y3 < ci95_all[2][1]):\n",
+        "  if np.logical_and(check.Y3 > ci_all[2][0], check.Y3 < ci_all[2][1]):\n",
         "    score=score+1\n",
         "    test[2]=1\n",
-        "  if np.logical_and(check.Y4 > ci95_all[3][0], check.Y4 < ci95_all[3][1]):\n",
+        "  if np.logical_and(check.Y4 > ci_all[3][0], check.Y4 < ci_all[3][1]):\n",
         "    score=score+1\n",
         "    test[3]=1\n",
-        "  if np.logical_and(check.Y5 > ci95_all[4][0], check.Y5 < ci95_all[0][1]):\n",
+        "  if np.logical_and(check.Y5 > ci_all[4][0], check.Y5 < ci_all[0][1]):\n",
         "    score=score+1\n",
         "    test[4]=1\n",
         "\n",
@@ -1471,7 +1476,7 @@
       "metadata": {
         "id": "gCFJ_iRWdtmH"
       },
-      "execution_count": 146,
+      "execution_count": 158,
       "outputs": []
     },
     {
@@ -1493,9 +1498,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gpefJa0Law19",
-        "outputId": "b6f5f5ec-7578-4c70-b5c3-31ccffb38351"
+        "outputId": "0d915991-1881-4be5-be76-2e54c9c0730f"
       },
-      "execution_count": 147,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "stream",
@@ -1551,11 +1556,7 @@
         "def plot_new_data_in(data,new,title):\n",
         "  #finding the CI\n",
         "  conf = 0.95\n",
-        "  ci95_1 = np.percentile(data.Y1, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_2 = np.percentile(data.Y2, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_3 = np.percentile(data.Y3, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_4 = np.percentile(data.Y4, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
-        "  ci95_5 = np.percentile(data.Y5, [100*(1-conf)/2,100*(1-(1-conf)/2)])\n",
+        "  ci95_1,ci95_2,ci95_3,ci95_4,ci95_5=make_CI(data,conf)\n",
         "\n",
         "  fig, (ax1, ax2, ax3, ax4,ax5) = plt.subplots(nrows=5, ncols=1, figsize=(10, 8))\n",
         "\n",
@@ -1628,7 +1629,7 @@
       "metadata": {
         "id": "XlXglGj10nvk"
       },
-      "execution_count": 149,
+      "execution_count": 160,
       "outputs": []
     },
     {
@@ -1642,9 +1643,9 @@
           "height": 829
         },
         "id": "HAIyaaMj1mFM",
-        "outputId": "edc8183b-0b5e-430b-b3a9-ea36409a2e43"
+        "outputId": "7e23e8d6-59eb-46e4-b4b0-cf0a5078f772"
       },
-      "execution_count": 150,
+      "execution_count": 161,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1691,7 +1692,7 @@
       "metadata": {
         "id": "kGMa8ExGZ7A7"
       },
-      "execution_count": 92,
+      "execution_count": 162,
       "outputs": []
     },
     {
@@ -1730,9 +1731,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4AevbWKS6-Ou",
-        "outputId": "ca86e6e7-cbe6-4906-9a01-526998cb73cb"
+        "outputId": "7735873a-e1aa-4145-83a4-55e38c6afa8a"
       },
-      "execution_count": 153,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "stream",
